@@ -6,7 +6,10 @@ in the future, replacing it with a warning about possible clock synchronisation
 errors, following a suggestion of Matthew Trent. Fixed a (recently-introduced)
 bug in the maildir code which could cause a segmentation fault on misconfigured
 systems. Made a minor change to the way multi-line responses are transmitted,
-which may help some broken clients to work with tpop3d.
+which may help some broken clients to work with tpop3d. Made some changes to
+the transmission of messages which may improve performance for clients on very
+fast networks, and added a tcp-send-buffer configuration option to control the
+SO_SNDBUF socket parameter.
 
 1.5.3
 
